Refactor for single Content Script Reworked content extraction to be based on identifying sitename from the current tab URL, then calling the corresponding image extraction function. The script getsrc_any.js now handles all supported sites except YouTube. The old content scripts for each page have been moved to content_scripts/old, for reference.

--- a/manifest.json
+++ b/manifest.json
@@ -18,24 +18,12 @@
 
     "content_scripts": [
 		{
-			"matches": ["*://*.instagram.com/*"],
-			"js": ["content_scripts/getsrc_insta.js"]
-		},
-		{
-			"matches": ["*://*.flickr.com/*"],
-			"js": ["content_scripts/getsrc_flickr.js"]
-		},
-		{
-			"matches": ["*://*.pinterest.com/*", "*://*.pinterest.co.uk/*"],
-			"js": ["content_scripts/getsrc_pinterest.js"]
-		},
-		{
 			"matches": ["*://*.youtube.com/*"],
 			"js": ["content_scripts/getsrc_youtube.js"]
 		},
 		{
-			"matches": ["*://*.artstation.com/*"],
-			"js": ["content_scripts/getsrc_artstation.js"]
+			"matches": ["*://*.artstation.com/*", "*://*.flickr.com/*", "*://*.pinterest.com/*", "*://*.pinterest.co.uk/*"],
+			"js": ["content_scripts/getsrc_any.js"]
 		}
 	],
 
