--- a/manifest.json
+++ b/manifest.json
@@ -43,5 +43,13 @@
 		"*://*.instagram.com/*",
 		"*://*.artstation.com/*",
 		"*://*.youtube.com/*"
-	]
+	],
+
+	"browser_specific_settings": {
+		"gecko": {
+			"id": "billy.pentney@gmail.com",
+			"strict_min_version": "42.0"
+		}
+	}
+
 }
