--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,8 @@
 				"*://*.artstation.com/*", 
 				"*://*.flickr.com/*", 
 				"*://*.pinterest.com/*", "*://*.pinterest.co.uk/*", 
-				"*://*.instagram.com/*"
+				"*://*.instagram.com/*",
+				"*://*.deviantart.com/*"
 			],
 			"js": ["content_scripts/getsrc_any.js"]
 		}
@@ -37,18 +38,18 @@
 		"tabs",
 		"contextMenus",
 		"clipboardWrite",
-		"*://*.pinterest.co.uk/pin/*",
 		"*://*.pinterest.com/pin/*",
 		"*://*.flickr.com/*",
 		"*://*.instagram.com/*",
 		"*://*.artstation.com/*",
-		"*://*.youtube.com/*"
+		"*://*.youtube.com/*",
+		"*://*.deviantart.com/*"
 	],
 
 	"browser_specific_settings": {
 		"gecko": {
 			"id": "billy.pentney@gmail.com",
-			"strict_min_version": "42.0"
+			"strict_min_version": "48.0"
 		}
 	}
 
