--- a/manifest.json
+++ b/manifest.json
@@ -18,16 +18,13 @@
 
     "content_scripts": [
 		{
-			"matches": ["*://*.youtube.com/*"],
-			"js": ["content_scripts/getsrc_youtube.js"]
-		},
-		{
 			"matches": [
 				"*://*.artstation.com/*", 
 				"*://*.flickr.com/*", 
 				"*://*.pinterest.com/*", "*://*.pinterest.co.uk/*", 
 				"*://*.instagram.com/*",
-				"*://*.deviantart.com/*"
+				"*://*.deviantart.com/*",
+				"*://*.youtube.com/*"
 			],
 			"js": ["content_scripts/getsrc_any.js"]
 		}
