--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
 	"manifest_version": 2,
 	"name": "Web Image Downloader",
-	"version": "0.3",
+	"version": "1.0",
 
-	"description": "Enables images to be downloaded from pages which otherwise prevent (or discourage) downloading. Currently supports: Pinterest, Instagram, Flickr, Artstation and YouTube thumbnails",
+	"description": "Enables images to be downloaded from pages which otherwise prevent (or discourage) downloading. Currently supports: Pinterest, Instagram, Flickr, Artstation, DeviantArt, and YouTube thumbnails",
 
 	"icons": {
 		"48": "icons/v2/wid-48.png",
